--- a/src/main/resources/static/css/body.css
+++ b/src/main/resources/static/css/body.css
@@ -1,21 +1,35 @@
 
 /* Center content */
-#bodyContainer,footer {
+#bodyContainer, footer {
   margin-left: auto;
   margin-right: auto;
   box-sizing:border-box;
   width: 60%;
 }
 
+#bodyContainer h1{
+
+  text-align: center;
+}
+
 /* Carousel section */
-#carousel {
+.d-block w-100 {
 
-
+  height: 800px;
 }
 
-#authorMonthContainer{
+#bookOfTheMonthImage{
+
+  height: 400px;
+  width: 300px;
+}
+
+#authorMonthContainer, #bookOfTheMonthContainer{
   display: flex;
+  gap: 4%;
+  text-align: justify;
 }
+
 
 
 #authorOfTheMonthImage {
@@ -24,8 +38,8 @@
   width: 300px;
 }
 
-#theCarousel2 {
 
+#authorOfTheMonthFindMore{
 
 }
 
