--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -25,7 +25,7 @@
             <!-- if user is not authenticated, show this link. Otherwise, it stays hidden.--> 
             <sec:authorize access="!isAuthenticated()">
 
-                <a id="myAccountLogin"class="nav-link" href="${pageContext.request.contextPath}/login">Login</a>
+                <a id="myAccountLogin"class="nav-link" href="${pageContext.request.contextPath}/login">Sign in</a>
 
             </sec:authorize> 
             <sec:authorize access="hasRole('ADMIN')">
