--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -56,13 +56,10 @@
 }
 
 #socialLinks {
-  text-align: center;
 }
-#socialLinks img {
-  padding-top: 5px;
-  margin-right: 10px;
-} 
+
 
 #socialLinks ul {        
-  padding-left: 0px;
+  display: flex;
+  gap: 5%;
 }
