--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -174,7 +174,11 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+   background-color: #ddd;
+   color:black;
+   text-decoration: none;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
