--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -12,16 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<script src="./javascript/javascript1.js"></script>
-<script src="./javascript/dropDownBtn.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
 
 <div id="logoContainer">
@@ -30,10 +21,10 @@
     <a id= "bookaPortaLink" href="${pageContext.request.contextPath}"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/bookaporta-logo.png" alt="bookLogo" id="bookaportaLogo" /></a>
 
     <!-- Search bar -->
-    <form action="" id="searchBar">
+    <form:form action="" method="GET" id="searchBar">
         <input type="text" placeholder="Search books or authors..." id="searchText" />
         <input type="submit" value="" id="searchButton" />
-    </form>
+    </form:form>
     
     <!-- MyAccount menu after login -->
     <div id="myAccount">
@@ -236,7 +227,6 @@
 
 
 
-
 <script>
     let loginModal = document.getElementById("login-modal");
     function toggleModal()
@@ -244,5 +234,4 @@
         if (loginModal.style.display !== "inline-block") loginModal.style.display = "inline-block";
         else loginModal.style.display = "none";
     } 
-</script>    
-
+</script>   
