--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -175,7 +175,7 @@
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-   background-color: #ddd;
+   background-color: yellow;
    color:black;
    text-decoration: none;
 }
