--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -1,14 +1,4 @@
-<%@ page pageEncoding="UTF-8" %>
 
-<%@taglib uri="http://www.springframework.org/tags/form" prefix="form" %>
-<%@ taglib prefix="sec" uri="http://www.springframework.org/security/tags" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>  
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<link rel="stylesheet" href="./css/header.css">
-
-<%@include file="library-dependencies.jspf" %>
 
 
 
@@ -34,19 +24,19 @@
             </sec:authorize> 
             <sec:authorize access="hasRole('ADMIN')">
                  <p>Welcome, <sec:authentication property="principal.username"/>!</p>
-                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>       
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="My Account"/>       
             </sec:authorize>
             <sec:authorize access="hasRole('CUSTOMER')">
                 <p>Welcome, <sec:authentication property="principal.username" />!</p>
-                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="My Account"/>
             </sec:authorize>
             <sec:authorize access="hasRole('SERVICEAGENT')">
                 <p>Welcome, <sec:authentication property="principal.username" />!</p>
-                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>            
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="My Account"/>            
             </sec:authorize>   
             <sec:authorize access="hasRole('STOCKMANAGER')">   
                 <p>Welcome, <sec:authentication property="principal.username" />!</p>
-                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="My Account"/>
             </sec:authorize>    
     
     </div>
@@ -66,7 +56,7 @@
               
 
             <a id="basketIconLink" href="${pageContext.request.contextPath}/cart/index">
-                    <img  id="basketIcon" src="./images/basket.png" alt="basketIcon">
+                    <img  id="basketIcon" src="${pageContext.request.contextPath}/images/basket.png" alt="basketIcon">
             </a>
 
             <div id="number"><%=cartAmount%></div>
