--- a/src/main/webapp/WEB-INF/views/library-dependencies.jspf
+++ b/src/main/webapp/WEB-INF/views/library-dependencies.jspf
@@ -1,5 +1,7 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-
+<!-- CSS -->
+<link rel="stylesheet" href="${pageContext.request.contextPath}/css/body.css" />
+<link rel="stylesheet" href="${pageContext.request.contextPath}/css/footer.css">
+<link rel="stylesheet" href="${pageContext.request.contextPath}/css/header.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css" />
 <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
@@ -14,9 +16,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<script src="./javascript/autocomplete.js"></script>
-<script src="./javascript/dropdownMenu.js"></script>
-<script src="./slick/slick.min.js"></script>
+<script src="${pageContext.request.contextPath}/javascript/autocomplete.js"></script>
+<script src="${pageContext.request.contextPath}/javascript/dropDownBtn.js"></script>
+<script src="${pageContext.request.contextPath}/slick/slick.min.js"></script>
 
 
 
