--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -8,8 +8,8 @@
     <a id= "bookaPortaLink" href="${pageContext.request.contextPath}"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/bookaporta-logo.png" alt="bookLogo" id="bookaportaLogo" /></a>
 
     <!-- Search bar -->
-    <form:form action="" method="GET" id="searchBar">
-        <input type="text" placeholder="Search books or authors..." id="searchText" />
+    <form:form action="${pageContext.request.contextPath}/books/search" method="POST" id="searchBar">
+        <input type="text" name="title" placeholder="Search books or authors..." id="searchText" required/>
         <input type="submit" value="" id="searchButton" />
     </form:form>
     
