--- a/src/main/resources/static/css/specificBook.css
+++ b/src/main/resources/static/css/specificBook.css
@@ -1,99 +1,26 @@
-* {
-        font-size: 14px;
-        font-family: Arial, Helvetica, sans-serif;
+.frontcover {
+  height: 110%;
+  max-height: 300px;
+  width: 110%;
+  max-width: 220px;
+  margin-top: 10%;
 }
-body {
-        margin: 0 8%; 
-        }
-        .header { grid-area: header; }
-        .frontcover { grid-area: frontcover; }
-        .bookDetails { grid-area: bookDetails; }
-        .cartBox { grid-area: cartBox; }
-        .relatedBooks { grid-area: relatedBooks; }
-        #footer { grid-area: footer; }
 
-        .grid-container {
-        display: grid;
-        grid-template-areas: 
-            'header header header'
-            'frontcover bookDetails cartBox'
-            'relatedBooks relatedBooks relatedBooks'
-            'footer footer footer';
-            
-        }  
 
-        .grid-container>div {
-            text-align: left;
-            padding: 25px 25px;
-        }
+.specificInfoTitle {
+  display: inline;
+  font-weight: bold;
+}
 
-        .header {
-            height: 170px;
-        }
+.specificInfos {
+  padding: 0;
+  list-style-type: none;
+}
 
-        .frontcover {
-            height: 333px;
-            width: 218px;
-        }
+.otherBooksCarousel img {
 
-        .bookDetails {
-            width: 500px;
-        }
-
-        .cartBox {
-            width: 218px;
-        }
-
-        .dropbtn {
-            background-color: white;
-            color: grey;
-            padding: 5px;
-            font-size: 14px;
-            border: none;
-            cursor: pointer;
-        }
-  
-
-        .dropbtn:hover, .dropbtn:focus {
-            background-color:yellow;
-        }
-  
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            z-index: 1;
-        }
-  
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-  
-        .dropdown-content a:hover {background-color: #ddd}
-  
-        .show {display:block;}
-
-        .title {
-            font-size: 21px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-
-        .blockTitle {
-            text-align: center;
-            background-color:yellow;
-        }
-  
-        .authorPage {
-            display: inline-block;
-    }
+    margin-left: 4%;
+    height: 300px;
+    max-width: 220px;
     
-    .info {
-        font-style: italic;
-    }
-    
-   
-
+  }
