--- a/src/main/webapp/WEB-INF/views/library-dependencies.jspf
+++ b/src/main/webapp/WEB-INF/views/library-dependencies.jspf
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="${pageContext.request.contextPath}/css/footer.css">
 <link rel="stylesheet" href="${pageContext.request.contextPath}/css/header.css">
 <link rel="stylesheet" href="${pageContext.request.contextPath}/css/booksPer.css"/>
+<link rel="stylesheet" href="${pageContext.request.contextPath}/css/FAQs.css"/>
+<link rel="stylesheet" href="${pageContext.request.contextPath}/css/specificBook.css"/>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css" />
 <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
