Order authors by last name for header menu

--- a/src/main/resources/static/css/body.css
+++ b/src/main/resources/static/css/body.css
@@ -14,9 +14,17 @@
 
 
 /* Carousel section */
-.d-block w-100 {
+/* .d-block w-100 {
 
   height: 800px;
+} */
+#carouselExampleIndicators{
+  overflow: hidden;
+}
+#carouselExampleIndicators img{
+
+  height: 450px;
+  
 }
 
 #bookOfTheMonthImage{
