--- a/src/main/resources/static/css/deliveryOptions.css
+++ b/src/main/resources/static/css/deliveryOptions.css
@@ -27,9 +27,10 @@
 }
 
 .advice{
-
+    margin-left: 8%;
     margin-top: 5%;
     margin-bottom: 5%;
+    margin-right: 5%;
 
     border:1px solid;
     background-color:#e0e0e0;
@@ -68,6 +69,15 @@
 }
 
 
+.personalDetails{
+
+    margin-left: 8%;
+}
+
+.deliveryAddress{
+
+    margin-left: 8%;
+}
 
 .deliveryButtonsContainer{
 
@@ -76,7 +86,7 @@
 }
 
 .deliveryOptionsButton{
-    width: 300px;
+    width: 250px;
     height: 30px;
 
     border:1px solid;
@@ -102,7 +112,7 @@
     appearance: button;
 
 
-    width: 300px;
+    width: 250px;
     height: 30px;
 
     border:1px solid;
