--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -145,7 +145,7 @@
 .dropdown {
  position: relative;
  display: inline-block;
- 
+ overflow: visible;;
 }
 .dropbtn{
    font-size: 20px;
@@ -162,13 +162,13 @@
  min-width: 200px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
- 
+
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
  color: black;
- padding: 12px 16px;
+ padding: 10px 13px;
  text-decoration: none;
  display: block;
 }
