--- a/src/main/webapp/WEB-INF/views/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/footer.jspf
@@ -26,10 +26,10 @@
     <div id="socialLinks" class="footerBlock">
         <p class="title">Social media</p>
         <ul>
-            <li><span class="social-rendering"><a href="https://facebook.com"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/f_logo_RGB-Blue_128.png" width="24" height="24" alt="Facebook logo"/></a></span></li>
-            <li><span class="social-rendering"><a href="https://twitter.com"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/2021+Twitter+logo+-+blue-128.png" width="24" height="24" alt="Twitter logo"/></a></span></li>
-            <li><span class="social-rendering"><a href="https://pinterest.com"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/pinterest-logo-128.png" alt="Pinterest logo" width="24" height="24"/></a></span></li>
-            <li><span class="social-rendering"><a href="https://youtube.com"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/yt_logo_rgb_light-128.png" alt="YouTube logo"  height="16"/></a></span></li>
+            <li><span class="social-rendering"><a href="https://facebook.com"><img src="${pageContext.request.contextPath}/images/f_logo_RGB-Blue_128.png" width="24" height="24" alt="Facebook logo"/></a></span></li>
+            <li><span class="social-rendering"><a href="https://twitter.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png" width="24" height="24" alt="Twitter logo"/></a></span></li>
+            <li><span class="social-rendering"><a href="https://pinterest.com"><img src="${pageContext.request.contextPath}/images/pinterest-logo-128.png" alt="Pinterest logo" width="24" height="24"/></a></span></li>
+            <li><span class="social-rendering"><a href="https://youtube.com"><img src="${pageContext.request.contextPath}/images/yt_logo_rgb_light-128.png" alt="YouTube logo"  height="16"/></a></span></li>
             
             
         </ul>
